--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,24 @@
 <html>
 <head>
 	<title>Pose Detection</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			background-color: #f2f2f2;
+		}
+		h1 {
+		text-align: center;
+		margin-top: 50px;
+		color: #333333;
+	}
+	
+	img {
+		display: block;
+		margin: auto;
+		margin-top: 50px;
+		box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+	}
+	</style>
 </head>
 <body>
 	<h1>Pose Detection using MediaPipe</h1>
